changed how env are implemented
